--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,56 +68,31 @@
 
   {% include_cached favicons.html %}
 
-  <!-- yfc -->
-    {% if site.resources.ignore_env != jekyll.environment and site.resources.self_hosted %}
+  {% if site.resources.ignore_env != jekyll.environment and site.resources.self_hosted %}
     <link href="{{ site.data.origin[type].webfonts | relative_url }}" rel="stylesheet">
 
-    {% else %}
-      {% for cdn in site.data.origin[type].cdns %}
-      <!--
-        <link rel="preconnect" href="{{ cdn.url }}" {{ cdn.args }}>
-        <link rel="dns-prefetch" href="{{ cdn.url }}" {{ cdn.args }}> 
-      -->
-          <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
-          <link rel="dns-prefetch" href="https://www.google-analytics.com">
-
-         <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">
-         <link rel="dns-prefetch" href="https://www.googletagmanager.com">
-
-      {% endfor %}
-    {% endif %}
-  <!-- yfc -->
-
-  <!-- Resource Hints -->
-  {% unless site.assets.self_host.enabled %}
-    {% for hint in site.data.origin.cors.resource_hints %}
-      {% for link in hint.links %}
-        <link rel="{{ link.rel }}" href="{{ hint.url }}" {{ link.opts | join: ' ' }}>
-      {% endfor %}
+  {% else %}
+    {% for cdn in site.data.origin[type].cdns %}
+      <link rel="preconnect" href="{{ cdn.url }}" {{ cdn.args }}>
+      <link rel="dns-prefetch" href="{{ cdn.url }}" {{ cdn.args }}>
     {% endfor %}
-  {% endunless %}
 
-  <!-- Bootstrap -->
-  {% unless jekyll.environment == 'production' %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  {% endunless %}
-
-  <!-- Theme style -->
-  <link rel="stylesheet" href="{{ '/assets/css/:THEME.css' | replace: ':THEME', site.theme | relative_url }}">
-
-  <!-- Web Font -->
-  <link rel="stylesheet" href="{{ site.data.origin[type].webfonts | relative_url }}">
+    <link rel="stylesheet" href="{{ site.data.origin[type].webfonts | relative_url }}">
+  {% endif %}
 
   <!-- GA -->
-<!--   {% if jekyll.environment == 'production' and site.google_analytics.id != empty and site.google_analytics.id %}
+  {% if jekyll.environment == 'production' and site.google_analytics.id != empty and site.google_analytics.id %}
     <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
     <link rel="dns-prefetch" href="https://www.google-analytics.com">
 
     <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">
     <link rel="dns-prefetch" href="https://www.googletagmanager.com">
-  {% endif %} -->
+  {% endif %}
 
-  <!-- Font Awesome Icons -->
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="{{ site.data.origin[type].bootstrap.css | relative_url }}">
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="{{ site.data.origin[type].fontawesome.css | relative_url }}">
 
   <link rel="stylesheet" href="{{ '/assets/css/:THEME.css' | replace: ':THEME', site.theme | relative_url }}">
@@ -131,8 +106,8 @@
   {% endif %}
 
   {% if page.layout == 'page' or page.layout == 'post' %}
-    <!-- Image Popup -->
-    <link rel="stylesheet" href="{{ site.data.origin[type].glightbox.css | relative_url }}">
+    <!-- Manific Popup -->
+    <link rel="stylesheet" href="{{ site.data.origin[type].magnific-popup.css | relative_url }}">
   {% endif %}
 
   <!-- JavaScript -->
