--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,6 +63,7 @@ tail_includes:
 
           <em>
             {% if authors %}
+            <!-- 
               {% for author in authors %}
                 {% if site.data.authors[author].url -%}
                   <a href="{{ site.data.authors[author].url }}">{{ site.data.authors[author].name }}</a>
@@ -71,8 +72,11 @@ tail_includes:
                 {%- endif %}
                 {% unless forloop.last %}{{ '</em>, <em>' }}{% endunless %}
               {% endfor %}
+            -->
+            <a class="post-desc fw-light mb-4">{{ page.author }}</a>
             {% else %}
-              <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>
+              <!-- <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a> -->
+              <a href="post-desc fw-light mb-4">{{ site.social.anonymity }}</a>
             {% endif %}
           </em>
         </span>
